--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,92 +1,70 @@
 name: "CI"
 
 env:
-  API_KEY_ALCHEMY: ${{ secrets.API_KEY_ALCHEMY }}
-  API_KEY_ETHERSCAN: ${{ secrets.API_KEY_ETHERSCAN }}
-  API_KEY_INFURA: ${{ secrets.API_KEY_INFURA }}
   FOUNDRY_PROFILE: "ci"
-  MNEMONIC: ${{ secrets.MNEMONIC }}
 
 on:
-  workflow_dispatch:
   pull_request:
+    branches:
+      - "main"
   push:
     branches:
       - "main"
 
 jobs:
   lint:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - name: "Check out the repo"
-        uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-
-      - name: "Install Foundry"
-        uses: "foundry-rs/foundry-toolchain@v1"
-
-      - name: "Install Node.js"
-        uses: "actions/setup-node@v3"
+      - uses: pnpm/action-setup@v2
         with:
-          cache: "yarn"
-          node-version: "lts/*"
-
-      - name: "Install the Node.js dependencies"
-        run: "yarn install --immutable"
-
-      - name: "Lint the contracts"
-        run: "yarn lint"
-
-      - name: "Add lint summary"
-        run: |
-          echo "## Lint result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+          version: 7
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: "pnpm"
+      - uses: "foundry-rs/foundry-toolchain@v1"
+        with:
+          version: "nightly"
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm lint
 
   build:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - name: "Check out the repo"
-        uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-
-      - name: "Install Foundry"
-        uses: "foundry-rs/foundry-toolchain@v1"
-
-      - name: "Build the contracts and print their size"
-        run: "forge build --sizes"
-
-      - name: "Add build summary"
-        run: |
-          echo "## Build result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: "pnpm"
+      - uses: "foundry-rs/foundry-toolchain@v1"
+        with:
+          version: "nightly"
+      - run: pnpm install --frozen-lockfile
+      - run: forge build
 
   test:
-    needs: ["lint", "build"]
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - name: "Check out the repo"
-        uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3
         with:
           submodules: "recursive"
-
-      - name: "Install Foundry"
-        uses: "foundry-rs/foundry-toolchain@v1"
-
-      - name: "Show the Foundry config"
-        run: "forge config"
-
-      - name: "Generate a fuzz seed that changes weekly to avoid burning through RPC allowance"
-        run: >
-          echo "FOUNDRY_FUZZ_SEED=$(
-            echo $(($EPOCHSECONDS - $EPOCHSECONDS % 604800))
-          )" >> $GITHUB_ENV
-
-      - name: "Run the tests"
-        run: "forge test"
-
-      - name: "Add test summary"
-        run: |
-          echo "## Tests result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: "pnpm"
+      - uses: "foundry-rs/foundry-toolchain@v1"
+        with:
+          version: "nightly"
+      - run: pnpm install --frozen-lockfile
+      - run: forge test
