--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "@prb/foundry-template",
-  "description": "Foundry-based template for developing Solidity smart contracts",
-  "version": "1.0.0",
-  "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://github.com/paulrberg"
-  },
+  "name": "@numoen/swap-library",
+  "description": "Solidity library for helping swap on the Numoen PMMP",
+  "version": "0.0.1",
   "devDependencies": {
     "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
