--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ env:
 on:
   pull_request:
     branches:
-      - "main"
+      - "master"
   push:
     branches:
-      - "main"
+      - "master"
 
 jobs:
   lint:
