--- a/foundry.toml
+++ b/foundry.toml
@@ -44,7 +44,7 @@ arbitrum = "https://arbitrum-mainnet.infura.io/v3/${API_KEY_INFURA}"
 avalanche = "https://avalanche-mainnet.infura.io/v3/${API_KEY_INFURA}"
 bsc = "https://bsc-dataseed.binance.org"
 ethereum = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-goerli = "https://goerli.infura.io/v3/${API_KEY_INFURA}"
+goerli = "${RPC_URL_GOERLI}"
 localhost = "http://localhost:8545"
 optimism = "https://optimism-mainnet.infura.io/v3/${API_KEY_INFURA}"
 polygon = "https://polygon-mainnet.infura.io/v3/${API_KEY_INFURA}"
